001-roman-numerals-converter/cfn1.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Deploying Roman Numeral Converter 
Parameters:
  pKeyPair:
    Description: My key pair
    Type: AWS::EC2::KeyPair::KeyName

  pImageID:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64
  
  
Resources:
#give it a logical id
  rSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP
      GroupName: enable-ssh-HTTP
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          ToPort: 80
          FromPort: 80
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          ToPort: 22
          FromPort: 22
          IpProtocol: tcp

  rWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref pImageID
      InstanceType: t2.micro
      KeyName: !Ref pKeyPair
              
      SecurityGroupIds: 
        - !GetAtt rSecurityGroup.GroupId
      Tags: 
        - Key: Name
          Value: abdul-server
      UserData: 
        Fn::Base64:
        |
          #!/bin/bash -x

          yum update -y
          yum install python3 -y
          yum install pip
          pip install flask

          FOLDER="https://raw.githubusercontent.com/zakus2023/my-repository/main/001-roman-numerals-converter"

          cd /home/ec2-user 

          wget ${FOLDER}/app.py

          mkdir templates
          cd templates
          wget ${FOLDER}/templates/index.html
          wget ${FOLDER}/templates/result.html
          cd ..
          python3 app.py

        
Outputs:
  oWebsiteUrl:
    Description: Description For URL
    Value: !Join [ "", ["http://", !GetAtt rWebServer.PublicDnsName]]
